--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
+      mongodb:
+        image: mongo:4.4
+        ports:
+          - 27018:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand('ping')'" 
+          --health-interval 10s 
+          --health-timeout 5s 
+          --health-retries 5
       rabbitmq:
         image: rabbitmq:3.7-management
         ports:
