--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/microservices": "^10.3.8",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "axios": "^1.7.0",
