--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "mongoose": "^8.4.0",
     "rabbitmq-boilerplate": "^1.0.9",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "superagent": "^9.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
